--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 	scroll-behavior: smooth;
+
 	
 	
 }
@@ -59,7 +60,7 @@ body{
 .section
 {
 	
-	padding-bottom: 100px;
+	padding-bottom: 50px;
 }
 
 .divider
@@ -79,6 +80,8 @@ body{
 	background-image: url("img/menu.png");
 	width: 50px;
 	height: 50px;
+	text-decoration: none;
+	border-radius: 0px;
 }
 
 .navbar-nav {
@@ -190,7 +193,7 @@ nav .nav-item {
 	text-align: center;
 	font-size: 1.9rem;
 	color: #60137b;
-	padding:35px;
+	padding:30px;
 	font-weight: bold;
 }
 
@@ -285,10 +288,6 @@ padding: 7px;
 	margin: auto;
 	position: relative;
 	display: block;
-	
-	
-
-	
 
 }
 .crea .img-thumbnail
@@ -324,7 +323,6 @@ padding: 7px;
 {
 		color: #FFC847;
 		font-size: 55px;
-		/* font-weight: bolder; */
 		position: absolute;
 		top: 50%;
 		left: 50%;
@@ -342,8 +340,6 @@ padding: 7px;
 
 .description
 {
-	
-	
 	width: 250px;
 	height: 50px;
 	margin: auto;
@@ -378,6 +374,10 @@ label{
 
 fieldset{
 	padding: 10px;
+}
+textarea
+{
+	resize: none;
 }
 .msg{
 	margin-top: 5px;
@@ -419,15 +419,14 @@ fieldset{
 	background-color: #F4BD61;
 	border: 4px solid #F4BD61 !important;
 	text-decoration: none;
-	color: #60137b;
+	color: #694F87;
 	
 }
 .btnsoc:hover {
-	background-color: #60137b;
+	background-color: #694F87;
 	transition: all .5s;
 	color:#F4BD61;
 	border: 4px solid #F4BD61!important;
-	
 }
 
 
@@ -451,8 +450,8 @@ fieldset{
 }
 
 #returnOnTop:hover {
-	background: #8D628B;
-	border:solid 3px #8D628B;
+	background: #694F87;
+	border:solid 3px #694F87;
 	
 }
 .titreBorder{
@@ -493,11 +492,16 @@ fieldset{
 		padding: 0px!important;
 	}  
 	.nav-item:hover{
-	background-color: #3B3A60;
+	background-color: #694F87;
 	}
 	nav .nav-item {
 		margin-left: 0px;
- 	}
+	 }
+	 #contact-section
+	 { 
+		padding-left: 7%;
+		padding-right: 7%;
+	}
 }
 
 @media (max-width: 1286px) { 
